--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,11 +14,14 @@
         <%= link_to "Home", root_path, class: "nav-link" %>
       </li>
       <li class="nav-item">
+        <%= link_to "Locations", locations_path, class: "nav-link" %>
+      </li>
+      <li class="nav-item">
         <%= link_to "Dashboard", "#", class: "nav-link" %>
       </li>
       <li class="nav-item dropdown">
         <% if user_signed_in? %>
-          <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+          <%= image_tag "https://kitt.lewagon.com/placeholder/users/random", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
           <%= link_to "Sign out", destroy_user_session_path, :method => :delete, class: "dropdown-item" %>
           </div>
