Added links to locations index

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,3 +1,14 @@
+.card-link {
+  position: absolute;
+  top: 0px;
+  bottom: 0px;
+  width: 100%;
+}
+
+.filter-space {
+  position: relative;
+}
+
 .card-trip {
   overflow: hidden;
   background: white;
