--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,8 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
     <%=  render 'shared/navbar' %>
-    <%= yield %>
+      <div class="content">
+        <%= yield %>
+      </div>
   </body>
 </html>
