--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -1,5 +1,5 @@
 <%= simple_form_for ([@location, @booking]) do |f| %>
-  <%= f.input :start_date %>
-  <%= f.input :end_date %>
-  <%= f.submit :submit %>
+    <%= f.input :start_date %>
+    <%= f.input :end_date %>
+    <%= f.submit :submit, class: 'btn btn-success' %>
 <% end %>
