added rent and own lists to index - should populate with correct info

--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -12,3 +12,18 @@ body {
   flex: 1 0 auto;
 }
 
+.booking-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.rent {
+  border-bottom: 1px solid black;
+}
+
+.own {
+  border-top: 1px solid black;
+}
+
