--- a/app/views/locations/_form.html.erb
+++ b/app/views/locations/_form.html.erb
@@ -1,4 +1,5 @@
 <%= simple_form_for @location do |f| %>
+  <%= f.input :photo, as: :file %>
   <%= f.input :name %>
   <%= f.input :address %>
   <%= f.input :description %>
