--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -1,6 +1,5 @@
 html, body {
   height: 100%;
-  margin: 0 auto;
 }
 
 body {
@@ -10,8 +9,7 @@ body {
 
 .content {
   flex: 1 0 auto;
-  z-index: -1;
-  margin: 50px 0;
+  padding-top: 5%;
 }
 
 .booking-wrapper {
