--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -10,6 +10,18 @@ body {
 
 .content {
   flex: 1 0 auto;
-  margin: 50px 0;
 }
 
+
+.booking-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.rent {
+  border-bottom: 1px solid black;
+}
+.own {
+  border-top: 1px solid black;
+}
