Added bookings link to navbar

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -17,6 +17,9 @@
           <%= link_to "Locations", locations_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
+          <%= link_to "Bookings", bookings_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item">
           <%= link_to "Dashboard", "#", class: "nav-link" %>
         </li>
         <li class="nav-item dropdown">
