--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,11 @@
  <div class="navbar navbar-expand-sm navbar-light navbar-lewagon fixed-top">
-    <%= link_to "#", class: "navbar-brand" do %>
-      <%= image_tag "https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" %>
-    <% end %>
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <%= link_to root_path, class: "navbar-brand" do %>
+          <%= image_tag "https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" %>
+        <% end %>
+      </li>
+    </ul>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -10,21 +14,25 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <%= link_to "Home", root_path, class: "nav-link" %>
-        </li>
         <li class="nav-item">
           <%= link_to "Locations", locations_path, class: "nav-link" %>
         </li>
-        <li class="nav-item">
-          <%= link_to "Dashboard", "#", class: "nav-link" %>
-        </li>
         <li class="nav-item dropdown">
           <% if user_signed_in? %>
+            <li class="nav-item">
+              <%= link_to "Bookings", bookings_path, class: "nav-link" %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "Dashboard", "#", class: "nav-link" %>
+            </li>
             <%= image_tag "https://kitt.lewagon.com/placeholder/users/random", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
             <%= link_to "Sign out", destroy_user_session_path, :method => :delete, class: "dropdown-item" %>
             </div>
+          <% else %>
+            <li class="nav-item">
+              <%= link_to "Sign In", new_user_session_path, class: "nav-link" %>
+            </li>
           <% end %>
         </li>
       </ul>
