Fixed padding for content

--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -4,6 +4,6 @@
     <%= link_to new_location_path, style: "color: black;" do  %>
       <i class="fas fa-plus-circle"></i>
     <% end %>
-      <%= render 'list' %>
+      <%= render @locations %>
   </div>
 </div>
