cards half done

--- a/app/views/locations/_location.html.erb
+++ b/app/views/locations/_location.html.erb
@@ -1,7 +1,7 @@
-<div class="d-flex p-3 border-top border-bottom border-secondary rounded-sm">
+<div class="d-flex p-3 border-top border-bottom border-secondary rounded-sm location-card">
   <div class="location-info flex-grow-1">
     <h3> <%= location.name %> </h3>
     <p> <%= location.description %> </p>
   </div>
-  <%= image_tag(location.photo.key) %>
+  <%= cl_image_tag(location.photo.key) %>
 </div>
