added geocode codes in locations controller and view

--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -6,4 +6,8 @@
     <% end %>
       <%= render 'list' %>
   </div>
+  <div id="map"
+     style="width: 100%; height: 600px;"
+     data-markers="<%= @markers.to_json %>"
+     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div>
 </div>
