--- a/app/views/locations/_location.html.erb
+++ b/app/views/locations/_location.html.erb
@@ -1,7 +1,12 @@
-<div class="d-flex p-3 border-top border-bottom border-secondary rounded-sm location-card">
-  <div class="location-info flex-grow-1">
-    <h3> <%= location.name %> </h3>
-    <p> <%= location.description %> </p>
+<div class="card-trip mt-4 filter-space">
+    <%= location.photo.attached? ? cl_image_tag(location.photo.key) : image_tag("https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg") %>
+    <div class="card-trip-infos">
+      <div>
+        <h2><%= location.name %></h2>
+          <p><%= location.description %></p>
+      </div>
+      <h2 class="card-trip-pricing">$<%= location.price_per_day %></h2>
+      <%= location.user.photo.attached? ? cl_image_tag(@location.photo.key, class: 'card-trip-user avatar-bordered') : image_tag("https://kitt.lewagon.com/placeholder/users/one", class: "card-trip-user avatar-bordered") %>
+    </div>
+    <%= link_to '', location_path(location), class: 'card-link' %>
   </div>
-  <%= cl_image_tag(location.photo.key) %>
-</div>
