--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -1,16 +1,21 @@
 <div class="container justify-content-center">
-  <div class="row d-flex flex-column align-items-center mt-4">
-    <div>
-      <h1>All locations</h1>
-      <%= link_to new_location_path, style: "color: black;" do  %>
-        <i class="fas fa-plus-circle"></i>
-      <% end %>
+  <div class="d-flex">
+    <div class="flex-grow-1">
+      <div class="d-flex">
+        <h1 class="flex-grow-1">All locations</h1>
+        <% if current_user %>
+          <%= link_to 'Create new location', new_location_path, class: 'btn btn-success btn-lg mb-3' %>
+        <% end %>
+      </div>
+      <div>
+        <%= render 'location' %>
+      </div>
 
     </div>
-      <%= render 'location' %>
   </div>
   <div id="map"
-     style="width: 100%; height: 600px;"
+     style="width: 50%; height: 100vh; display: fixed;"
      data-markers="<%= @markers.to_json %>"
-     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div>
+     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
+  </div>
 </div>
