Fixed container in indexview for locations

--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container justify-content-center">
+<div class="mr-5">
   <div class="d-flex">
     <div class="flex-grow-1">
       <div class="d-flex">
