Added logo and fixed size

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,7 +2,7 @@
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
         <%= link_to root_path, class: "navbar-brand" do %>
-          <%= image_tag "https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" %>
+          <%= image_tag('ChefSpace-logo.png') %>
         <% end %>
       </li>
     </ul>
