--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -22,11 +22,11 @@
             <li class="nav-item">
               <%= link_to "Bookings", bookings_path, class: "nav-link" %>
             </li>
-            <%= image_tag "https://kitt.lewagon.com/placeholder/users/random", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+            <%= image_tag "https://kitt.lewagon.com/placeholder/users/random", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, aria: {haspopup: true}, aria: {expanded: false} %>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <%= link_to "Sign out", destroy_user_session_path, :method => :delete, class: "dropdown-item" %>
+              <%= link_to "Sign out", destroy_user_session_path, :method => :delete, class: "dropdown-item" %>
             </div>
-          <% else %>
+         <% else %>
             <li class="nav-item">
               <%= link_to "Sign In", new_user_session_path, class: "nav-link" %>
             </li>
