--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -17,16 +17,14 @@
         <li class="nav-item">
           <%= link_to "Locations", locations_path, class: "nav-link" %>
         </li>
-        <li class="nav-item dropdown">
           <% if user_signed_in? %>
             <li class="nav-item">
               <%= link_to "Bookings", bookings_path, class: "nav-link" %>
             </li>
-            <%= image_tag "https://kitt.lewagon.com/placeholder/users/random", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, aria: {haspopup: true}, aria: {expanded: false} %>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-              <%= link_to "Sign out", destroy_user_session_path, :method => :delete, class: "dropdown-item" %>
-            </div>
-         <% else %>
+            <li class="nav-item">
+              <%= link_to "Sign out", destroy_user_session_path, :method => :delete, class: "nav-link" %>
+            </li>
+          <% else %>
             <li class="nav-item">
               <%= link_to "Sign In", new_user_session_path, class: "nav-link" %>
             </li>
