--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -22,7 +22,7 @@
               <%= link_to "Bookings", bookings_path, class: "nav-link" %>
             </li>
             <li class="nav-item">
-              <%= link_to "Sign out", destroy_user_session_path, :method => :delete, class: "nav-link" %>
+              <%= link_to "Sign out", destroy_user_session_path, method: :delete, class: "nav-link" %>
             </li>
           <% else %>
             <li class="nav-item">
