took away the border and added a bottom border for h2

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,7 +1,7 @@
 <div class="booking-wrapper">
 
   <div class="rent">
-    <h2>Properties I've Requested to Rent</h2>
+    <h2 class="border-bottom mb-3">Properties I've Requested to Rent</h2>
     <% @bookings.each do |booking| %>
       <% unless booking.status == 'rejected' %>
         <div class="d-flex p-3 mb-3 border-top border-bottom border-secondary rounded-sm location-card-big">
@@ -23,7 +23,7 @@
   </div>
 
   <div class="own">
-    <h2>Properties I Own</h2>
+    <h2 class="border-bottom mb-3">Properties I Own</h2>
       <% @bookings_as_owner.each do |booking| %>
         <% unless booking.status == 'rejected' %>
           <div class="d-flex p-3 mb-3 border-top border-bottom border-secondary rounded-sm location-card-big">
