--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -14,7 +14,7 @@
     </div>
 
     <div id="map"
-       style="width: 50%; height: 100vh; display: fixed;"
+       style="width: 50%; height: 100vh;"
        data-markers="<%= @markers.to_json %>"
        data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
     </div>
