--- a/app/assets/stylesheets/components/_location-card.scss
+++ b/app/assets/stylesheets/components/_location-card.scss
@@ -3,9 +3,14 @@
   height: 180px;
   background-color:  $white;
   position: relative;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+  transition: all .2s ease-in-out;
   img{
     width: 250px;
     height: auto;
+  }
+  &:hover {
+    transform: scale(1.02)
   }
 }
 
