Added main title to navbar

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,6 +5,11 @@
           <%= image_tag('ChefSpace-logo.png') %>
         <% end %>
       </li>
+      <li class="nav-item">
+        <%= link_to root_path, class: 'nav-link' do %>
+          <h3 class="mt-2">Chefs_Space</h3>
+        <% end %>
+      </li>
     </ul>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
