Added color scheme to colors

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -2,9 +2,12 @@
 
 // For example:
 $red: #FD1015;
-$blue: #167FFB;
 $yellow: #FFC65A;
-$orange: #E67E22;
-$green: #1EDD88;
 $gray: #0E0000;
+
+
+
 $light-gray: #F4F4F4;
+$green: #57bc90;
+$orange: #ff9d47;
+$blue: #77c9d4;
