Added button style

--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -4,7 +4,7 @@
       <div class="d-flex">
         <h1 class="flex-grow-1">All locations</h1>
         <% if current_user %>
-          <%= link_to 'Create new location', new_location_path, class: 'btn btn-success btn-lg mb-3 mr-4' %>
+          <%= link_to 'Create new location', new_location_path, class: 'button button-success mb-3 mr-4' %>
         <% end %>
       </div>
       <div>
