--- a/app/views/locations/_location.html.erb
+++ b/app/views/locations/_location.html.erb
@@ -6,8 +6,12 @@
         <p> <%= location.description %> </p>
       </div>
       <div class="d-flex mt-5">
-        <h5 class='flex-grow-1'> $<%= location.price_per_day %> / day </h5>
-        <h5 class="mr-3"> <%= location.capacity %> tables </h5>
+        <div class=' d-flex flex-grow-1'>
+          <h5 class= 'mr-2'> $<%= location.price_per_day %> </h5>
+          <p style='color: $light-gray'>per day</p>
+        </div>
+
+        <h5 class="mr-3"><i class="fas fa-user-friends"></i> <%= location.capacity %> </h5>
       </div>
     </div>
     <%= cl_image_tag(location.photo.key, class: 'rounded-sm') %>
