--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -8,13 +8,16 @@
         <% end %>
       </div>
       <div>
+      <div class="searchbar my-4">
+        <%= render 'shared/search' %>
+      </div>
         <%= render 'location' %>
       </div>
 
     </div>
 
     <div id="map"
-       style="width: 50%; height: 100vh;"
+       style="width: 50%; height: 100vh; margin-left: 4vh;"
        data-markers="<%= @markers.to_json %>"
        data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
     </div>
