--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,15 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div id="banner">
+  <div class="banner-text-chef">
+    <h2>Open your restaurant anywhere</h2>
+  </div>
+  <div class="banner-text-owner">
+    <h2>Earn money as a Chef_Space host</h2>
+  </div>
+  <div class="banner-text-pitch">
+    <p>At Chef_Space, we pair great chefs and great restaurants.</p>
+    <p>Whether you need a space for the weekend or you're looking to let go of your space for the weekend, we can help.</p>
+  </div>
+  <div class="banner-sign-up-button">
+    <%= link_to 'Sign up now', new_user_session_path, class: 'btn btn-success btn-lg'  %>
+  </div>
+</div>
