--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -1,5 +1,9 @@
-<%= simple_form_for ([@location, @booking]) do |f| %>
-    <%= f.input :start_date, html5: true %>
-    <%= f.input :end_date, html5: true %>
-    <%= f.submit :submit, class: 'btn btn-success' %>
-<% end %>
+<div id="location-booking-dates" data-unavailable="<%= @location.unavailable_dates.to_json %>">
+  <% if current_user != @location.user %>
+    <%= simple_form_for ([@location, @booking]) do |f| %>
+        <%= f.input :start_date, as: :string %>
+        <%= f.input :end_date, as: :string %>
+        <%= f.submit :submit, class: 'btn btn-success' %>
+    <% end %>
+  <% end %>
+</div>
