--- a/app/views/locations/_location.html.erb
+++ b/app/views/locations/_location.html.erb
@@ -1,5 +1,5 @@
 <% @locations.each do |location| %>
-  <div class="d-flex p-3 mb-3 border-top border-bottom border-secondary rounded-sm location-card">
+  <div class="d-flex p-3 mb-3  location-card">
     <div class="location-info flex-grow-1 mb-5">
       <div>
         <h3> <%= location.name %> </h3>
