--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -1,22 +1,22 @@
-<div class="mr-5">
-  <div class="d-flex">
-    <div class="flex-grow-1">
-      <div class="d-flex">
-        <h1 class="flex-grow-1">All locations</h1>
-        <% if current_user %>
-          <%= link_to 'Create new location', new_location_path, class: 'button button-success mb-3 mr-4' %>
-        <% end %>
-      </div>
+  <div class="map-container">
+    <div id="map"
+       data-markers="<%= @markers.to_json %>"
+       data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
+    </div>
+    <div class="d-flex justify-content-end map-headers">
+      <% if current_user %>
+        <%= link_to 'Open Location', new_location_path, class: 'button button-success mb-3 mr-4' %>
+      <% end %>
+    </div>
+    <div class="flex-grow-1" id='content-location'>
       <div>
         <%= render 'location' %>
       </div>
 
     </div>
 
-    <div id="map"
-       style="width: 50%; height: 100vh;"
-       data-markers="<%= @markers.to_json %>"
-       data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
-    </div>
-   </div>
-</div>
+  </div>
+  <!-- <div class="d-flex"> -->
+
+
+
