--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -29,7 +29,7 @@
   z-index: 1;
   width: 100%;
   background: rgb(255,255,255);
-  background: linear-gradient(180deg, rgba(255,255,255,1) 50%, rgba(255,255,255,0) 100%);
+  background: linear-gradient(180deg, rgba(255,255,255,1) 50%, rgba(255,255,255,0.8393732492997199) 65%, rgba(255,255,255,0) 100%);
 
   padding: 24px;
   top: 58px;
