Added slight opcaity on cards so we can see map

--- a/app/assets/stylesheets/components/_location-card.scss
+++ b/app/assets/stylesheets/components/_location-card.scss
@@ -4,10 +4,12 @@
   border-bottom: 1px solid $light-gray;
   border-top: 1px solid $light-gray;
   border-radius: 16px;
-  background-color:  $white;
+  background-color:  rgba(255,255,255,0.9);
   position: relative;
   box-shadow: 0 2px 6px rgba(0,0,0,0.2);
   transition: all .2s ease-in-out;
+
+  text-shadow: 2px 2px $light-gray;
   img{
     width: 250px;
     height: auto;
@@ -45,4 +47,6 @@
 .location-card-big p {
   margin-bottom: 0;
 }
+
+
 
