--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,7 +7,7 @@
       </li>
       <li class="nav-item">
         <%= link_to root_path, class: 'nav-link' do %>
-          <h3 class="mt-2">Chefs_Space</h3>
+          <h3 class="mt-2">Chef_Space</h3>
         <% end %>
       </li>
     </ul>
