--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div id="banner">
+<!-- <div id="banner">
   <div class="banner-text-chef">
     <h2>Open your restaurant anywhere</h2>
   </div>
@@ -9,5 +9,11 @@
     <p>At Chef_Space, we pair great chefs and great restaurants.</p>
     <p>Whether you need a space for the weekend or you're looking to let go of your space for the weekend, we can help.</p>
     <%= link_to 'Sign up now', new_user_session_path, class: 'btn btn-success btn-lg'  %>
+  </div>
+</div> -->
+<div id="banner">
+  <div id="banner-text">
+    <div id="banner-text-typed">
+    </div>
   </div>
 </div>
