Searchbar style added

--- a/app/views/shared/_search.html.erb
+++ b/app/views/shared/_search.html.erb
@@ -1,7 +1,7 @@
 <%= form_tag locations_path, method: :get do %>
   <%= search_field_tag :query,
     params[:query],
-    class: "form-control",
+    class: 'search-bar',
     id: "location_address",
     placeholder: "Search"
   %>
