--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,24 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ChefSpace</title>
+    <title>Chef_Space</title>
+    <%= favicon_link_tag asset_path('favicon.ico') %>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= stylesheet_pack_tag 'application' %>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
   </head>
-
   <body>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
     <%=  render 'shared/navbar' %>
-      <div class="content">
-        <%= yield %>
-      </div>
+    <div class="content">
+      <%= yield %>
+    </div>
     <%= render 'shared/footer' %>
   </body>
 </html>
