Style fixes/margins/nav/foot/etc..........

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,55 +1,1 @@
-<div class="booking-wrapper">
-
-  <div class="rent">
-    <h2 class="border-bottom mb-3">Properties I've Requested to Rent</h2>
-    <% @bookings_as_renter.each do |booking| %>
-      <div class="d-flex p-3 mb-3 border-top border-bottom border-secondary rounded-sm location-card-big">
-        <div class="location-info flex-grow-1 mb-5">
-          <div>
-            <h3><%= link_to "#{booking.location.name}", location_path(booking.location) %> </h3>
-            <p><%= booking.location.address %> </p>
-            <p>$<%= booking.location.price_per_day %> / day </p>
-            <p><%= booking.location.capacity %> table(s) </p>
-            <p>Start: <%= booking.start_date.strftime('%A, %b %d') %></p>
-            <p>End: <%= booking.end_date.strftime('%A, %b %d') %></p>
-            <p>Status: <%= booking.status %></p>
-          </div>
-        </div>
-        <%= cl_image_tag(booking.location.photo.key, class: 'rounded-sm') %>
-      </div>
-    <% end %>
-  </div>
-
-  <div class="own">
-    <h2 class="border-bottom mb-3">Properties I Own</h2>
-      <% @bookings_as_owner.each do |booking| %>
-        <div class="d-flex p-3 mb-3 border-top border-bottom border-secondary rounded-sm location-card-big">
-          <div class="location-info flex-grow-1 mb-5">
-            <div class="d-flex-column">
-              <h3><%= link_to "#{booking.location.name}", location_path(booking.location) %></h3>
-              <p><%= booking.location.address %> </p>
-              <p>$<%= booking.location.price_per_day %> / day </p>
-              <p>Start: <%= booking.start_date.strftime('%A, %b %d') %></p>
-              <p>End:<%= booking.end_date.strftime('%A, %b %d') %></p>
-              <div class="d-flex mt-3">
-                <% if booking.pending? %>
-                  <%= simple_form_for booking do |f| %>
-                    <%= f.input :status, as: :hidden, input_html: { value: 'confirmed' } %>
-                    <%= f.submit 'Accept', class: 'btn btn-success' %>
-                  <% end %>
-                  <%= simple_form_for booking do |f| %>
-                    <%= f.input :status, as: :hidden, input_html: { value: 'rejected' } %>
-                    <%= f.submit 'Reject', class: 'btn btn-success ml-3' %>
-                  <% end %>
-                <% else %>
-                  <p class="booking-tag">Status: <%= booking.status %></p>
-                <% end %>
-              </div>
-            </div>
-          </div>
-          <%= cl_image_tag(booking.location.photo.key, class: 'rounded-sm') %>
-        </div>
-      <% end %>
-  </div>
-
-</div>
+<h1>allo</h1>
