--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -3,14 +3,15 @@ html, body {
   margin: 0 auto;
 }
 
-body {
+.body {
   display: flex;
   flex-direction: column;
 }
 
 .content {
   flex: 1 0 auto;
-  // padding: 15vh 5vw;
+  min-height: 100vh;
+  margin-top: 100px;
 }
 
 
