--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -20,6 +20,8 @@
         <div class="container">
           <div class="row">
             <div class="col col-md-6 offset-3">
+              <p class="notice"><%= notice %></p>
+              <p class="alert"><%= alert %></p>
               <%= yield %>
             </div>
           </div>
