--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -3,7 +3,7 @@
 
 // Define fonts for body and headers
 $body-font: "Lato", "sans-serif";
-$headers-font: "Nova Round", "cursive";
+$headers-font: "Lato", "cursive";
 
 // To use a font file (.woff) uncomment following lines
 // @font-face {
