--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,5 +2,9 @@
   <div id="banner-text">
     <div id="banner-text-typed">
     </div>
+
+    <div class= "mb-5">
+      <%= render 'shared/search' %>
+    </div>
   </div>
 </div>
