fixed img path for banner

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div id="banner">
+<div id="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), <%= image_path('bg.jpeg') %>;">
   <div id="banner-text">
     <div id="banner-text-typed">
     </div>
