fixed banner image

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,4 +1,5 @@
 #banner {
+  background: image-url('bg.jpeg');
   background-position: center;
   background-size: cover;
   height: 100vh;
@@ -11,6 +12,7 @@
 }
 
  #banner-text {
+  height: 50vh;
   width: 100vw;
   display: flex;
   flex-direction: column;
@@ -22,9 +24,8 @@
   color: #FFFFFF;
   font-size: 40px;
   font-weight: bold;
-  height: 40px;
+  height: 30vh;
   width: 100vw;
-  margin-bottom: 48px;
   text-align: center;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
 }
