fixed jpeg to jpg

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,5 +1,5 @@
 #banner {
-  background: image-url('bg.jpeg');
+  background: image-url('bg.jpg');
   background-position: center;
   background-size: cover;
   height: 100vh;
