--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,7 @@
-<div id="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), <%= image_path('bg.jpeg') %>;">
+<div id="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), <%= image_path('bg.jpg') %>;">
   <div id="banner-text">
     <div id="banner-text-typed">
     </div>
-
     <div class= "mb-5">
       <%= render 'shared/search' %>
     </div>
