--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,5 +1,5 @@
 #banner {
-  background: image-url('bg.jpg');
+  background: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), image-url('bg.jpg');
   background-position: center;
   background-size: cover;
   height: 100vh;
@@ -24,7 +24,8 @@
   color: #FFFFFF;
   font-size: 40px;
   font-weight: bold;
-  height: 30vh;
+  margin-bottom: 48px;
+  height: 40px;
   width: 100vw;
   text-align: center;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
