Added dynamic rendering of bookings and style

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -7,6 +7,7 @@
 @import "footer";
 @import "location-banner";
 @import "location-card";
+@import "booking-card";
 @import "map";
 @import "navbar";
 @import "buttons";
