--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -15,6 +15,24 @@
   }
 }
 
+.button-small {
+  border: none !important;
+  font-size: 14px;
+  padding: 8px 16px;
+  border-radius: 30px;
+  width: 100px;
+  color: white;
+  // box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+  transition: all .2s easy-in;
+  a{
+    text-decoration: none;
+  }
+  &:hover{
+    text-decoration: none;
+    color: white;
+  }
+}
+
 
 .button-success{
   // background-color: $green;
