Fixed so you only can see you own bookings

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,5 +1,5 @@
 
-<% @bookings.each do |booking| %>
+<% @bookings_as_renter.each do |booking| %>
   <%= render 'booking', booking: booking, owner: false %>
 <% end %>
 
