Changed the footer

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,13 +1,8 @@
 <div class="footer">
   <div class="footer-links">
-    <a href="#"><i class="fab fa-github"></i></a>
-    <a href="#"><i class="fab fa-instagram"></i></a>
-    <a href="#"><i class="fab fa-facebook"></i></a>
-    <a href="#"><i class="fab fa-twitter"></i></a>
-    <a href="#"><i class="fab fa-linkedin"></i></a>
-  </div>
-  <div class="footer-copyright">
-    Bill Splitters
+    <a id="a" href="https://github.com/abdul-muhaimin"><i class="fab fa-github"></i><span>Abdul</span></a>
+    <a id="a"  href="https://github.com/typexapex"><i class="fab fa-github"></i><span>Thomas</span></a>
+    <a id="a"  href="https://github.com/SimonBystrom"><i class="fab fa-github"></i><span>Simon</span></a>
+    <a id="a"  href="https://github.com/parK-dev"><i class="fab fa-github"></i><span>Kirk</span></a>
   </div>
 </div>
-
