--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,27 +1,80 @@
 .footer {
-  background: #F4F4F4;
-  display: flex;
+  height: 32px;
+  // padding: 58px 627px;
+  margin-top: auto;
+  position:absolute;
   align-items: center;
-  justify-content: space-between;
-  height: 100px;
-  padding: 0px 50px;
-  color: rgba(0,0,0,0.3);
+  display: flex;
+  justify-content: center;
+  width: 100vw;
 }
+
 .footer-links {
-  display: flex;
-  align-items: center;
+  text-align: center;
+  // width: 100vw;
 }
+
+/* Icons */
 .footer-links a {
+  color:gray;
+  font-size: 28px;
+  text-align:center;
+  align-items: center;
+  text-decoration:none;
+  position: relative;
+  display: inline-block;
+  width:40px;
+  height:28px;
+  padding:6px 0px;
+  margin:0 2px;
+}
+
+#a:hover {
   color: black;
-  opacity: 0.15;
-  text-decoration: none;
-  font-size: 24px;
-  padding: 0px 10px;
 }
-.footer-links a:hover {
-  opacity: 1;
+
+/* pop-up text */
+#a span {
+  color:black;
+  background: white;
+  position:absolute;
+  font-family:sans-serif;
+  bottom:0;
+  left:-25px;
+  right:-25px;
+  padding:5px 7px;
+  z-index:-1;
+  font-size:14px;
+  border-radius:2px;
+  visibility:hidden;
+  opacity:0;
+  -o-transition:all .5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  -webkit-transition: all .5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  -moz-transition: all .5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  transition: all .5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
-.footer .fa-heart {
-  color: #D23333;
+
+/* pop-up text arrow */
+#a span:before {
+  content:'';
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-top: 5px solid white;
+  position:absolute;
+  bottom:-5px;
+  left:40px;
 }
+
+/* text pops up when icon is in hover state */
+#a:hover span {
+  bottom:32px;
+  visibility:visible;
+  opacity:1;
+  z-index:2;
+}
+
+
+
 
