name of location links to location

--- a/app/assets/stylesheets/components/_booking-card.scss
+++ b/app/assets/stylesheets/components/_booking-card.scss
@@ -53,3 +53,12 @@
   color: $orange;
 }
 
+.locations-link-tabs{
+  color: black;
+  text-decoration: none;
+  &:hover{
+    text-decoration: none;
+    color: black;
+  }
+}
+
