--- a/app/views/bookings/_booking.html.erb
+++ b/app/views/bookings/_booking.html.erb
@@ -4,8 +4,10 @@
   <div class="d-flex p-3 mb-3  booking-card">
     <div class="location-info flex-grow-1  d-flex flex-column justify-content-start">
       <div>
-        <h3> <%= booking.location.name %> </h3>
-        <p> <%= booking.location.description %> </p>
+          <%= link_to location_path(booking.location), class: 'locations-link-tabs' do %>
+            <h3> <%= booking.location.name %> </h3>
+          <% end %>
+          <p> <%= booking.location.description %> </p>
       </div>
       <div class="d-flex">
         <div class=' d-flex flex-grow-1'>
@@ -37,7 +39,9 @@
     <div class="d-flex p-3 mb-3  booking-card">
       <div class="location-info flex-grow-1  d-flex flex-column justify-content-start">
         <div>
-          <h3> <%= booking.location.name %> </h3>
+          <%= link_to location_path(booking.location), class: 'locations-link-tabs' do %>
+            <h3> <%= booking.location.name %> </h3>
+          <% end %>
           <p> <%= booking.location.description %> </p>
         </div>
         <div class="d-flex">
@@ -64,7 +68,9 @@
     <div class="d-flex p-3 mb-3  booking-card">
       <div class="location-info flex-grow-1  d-flex flex-column justify-content-start">
         <div>
-          <h3> <%= booking.location.name %> </h3>
+          <%= link_to location_path(booking.location), class: 'locations-link-tabs' do %>
+            <h3> <%= booking.location.name %> </h3>
+          <% end %>
           <p> <%= booking.location.description %> </p>
         </div>
         <div class="d-flex">
@@ -90,7 +96,9 @@
     <div class="d-flex p-3 mb-3  booking-card">
       <div class="location-info flex-grow-1  d-flex flex-column justify-content-start">
         <div>
-          <h3> <%= booking.location.name %> </h3>
+          <%= link_to location_path(booking.location), class: 'locations-link-tabs' do %>
+            <h3> <%= booking.location.name %> </h3>
+          <% end %>
           <p> <%= booking.location.description %> </p>
         </div>
         <div class="d-flex">
