--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -1,29 +1,28 @@
-    <div class="location-banner" style="background-image: url(<%= @location.photo.attached? ? cl_image_path(@location.photo.key) : 'https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg' %>)">
-    </div>
-<div class="container justify-content-center">
-
-    <div class="d-flex m-3">
-      <div class="flex-grow-1">
-        <div class="card p-3 mt-3 mr-5">
-          <h2> <%= @location.name %> </h2>
-          <p> <%= @location.description %> </p>
-        </div>
-        <div class="card p-3 mt-2 mr-5">
-          <h4> Address </h4>
-          <p> <%= @location.address %> </p>
-        </div>
+<div class="location-show-wrapper">
+  <div class="row">
+    <div class="col-8">
+      <div class="location-banner" id="location-info-image" style="background-image: url(<%= @location.photo.attached? ? cl_image_path(@location.photo.key) : 'https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg' %>)">
       </div>
-      <div>
-        <div class="card p-3 mt-3">
+  </div>
+    <div class="col-4">
+      <div class="d-flex flex-column location-info-wrapper">
+        <h2> <%= @location.name  %> </h2>
+        <p> <%= @location.description %> </p>
+        <p> <%= @location.address %> </p>
+        <div class=' d-flex flex-grow-1'>
+          <h5 class= 'mr-2'> $<%= @location.price_per_day %> </h5>
+          <p style='color: $light-gray'>per day</p>
+        </div>
+
+        <h5 class="mr-3"><i class="fas fa-user-friends"></i> <%= @location.capacity %> </h5>
+      </div>
+      <% unless @location.user == current_user %>
+        <div class="location-info-wrapper mt-3">
           <% if policy(Booking).create? %>
             <%= render 'bookings/form' %>
           <% end %>
         </div>
-        <div class="card p-3 mt-2">
-          <h4>$<%= @location.price_per_day %> / day</h4>
-          <h4> <%= @location.capacity %> tables</h4>
-        </div>
-      </div>
+      <% end %>
     </div>
+  </div>
 </div>
-
