--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -8,7 +8,7 @@
       <%= render 'shared/search' %>
     </div>
     <% if current_user %>
-      <%= link_to 'Open Location', new_location_path, class: 'button button-success mb-3 mr-4' %>
+      <%= link_to 'Add Location', new_location_path, class: 'button button-success mb-3 mr-4' %>
     <% end %>
   </div>
   <div class="flex-grow-1" id='content-location'>
