--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -32,6 +32,7 @@
 #a span {
   color:black;
   background: white;
+  border-color: black;
   position:absolute;
   font-family:$body-font;
   bottom:0;
