--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   </head>
   <body>
     <%=  render 'shared/navbar' %>
-    <div class="content">
+    <div class="content" style="background-image: <%= image_path('https://qtw0v3mso2e1esf9u3xzvfo5-wpengine.netdna-ssl.com/wp-content/uploads/2016/01/Grey-Gradient-Background-6.jpg') %>;" >
       <%= yield %>
     </div>
     <%= render 'shared/footer' %>
