Added a total calculator for the date picker on the location page

--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -19,7 +19,7 @@
       <% if @show_calendar %>
         <div class="location-info-wrapper mt-3">
           <% if policy(Booking).create? %>
-            <%= render 'bookings/form' %>
+            <%= render 'bookings/form', price: @location.price_per_day %>
           <% end %>
         </div>
       <% end %>
